Criando model/regras de pacientes
